<resources>
    <string name="app_name">ICX-Indonesia Crypto Xchange</string>
    <string name="register">REGISTER</string>
    <string name="login">LOG IN</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="signup_login_hint">Already have an account? Log In</string>
    <string name="login_signup_hint">"Don't have an account? Register"</string>
    <string name="message1">Login successfully!</string>
    <string name="message2">Login failed!</string>
    <string name="message3">Empty fields are not allowed!</string>
    <string name="message4">Please Enter Correct Email!</string>
    <string name="message5">Register successfully!</string>
    <string name="message6">Register failed!</string>
    <string name="message7">"Password confirmation doesn't match password!"</string>
    <string name="message8">Password must be at least 8 characters!</string>

    <string name="kurang_uang">"You don't have enough money!"</string>
    <string name="kurang_koin">"You don't have enough coin!"</string>
    <string name="please_coin">Please enter the number of coins!</string>

    <string name="fullname">Full Name</string>
    <string name="username">Username</string>
    <string name="phone">Phone Number</string>
    <string name="deposit">Deposit</string>
    <string name="shop">Shop</string>
    <string name="account_detail">Account Details</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="your_wallet">Your Wallet</string>
    <string name="enter_nominal">Enter Nominal</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="enter_coin">Enter The Number Of Coins</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="number_coin">Number Of Coins : </string>
</resources>