<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BtcActivity"
    android:orientation="vertical">

    <TextView
        style="@style/headerTextPrimary"
        android:layout_marginTop="24dp"
        android:text="@string/shop"
        android:layout_marginBottom="16dp"/>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="8dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/card_view_background"
        app:cardCornerRadius="@dimen/cardview_radius"
        app:cardElevation="@dimen/cardview_elevation"
        app:contentPadding="@dimen/cardview_padding"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/coinsItemMainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgbtc"
                android:src="@drawable/icon_btc"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tview_name_btc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:layout_marginStart="@dimen/default_start_margin"
                android:gravity="start"
                style="@style/TextAppearance.Custom.Default"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/imgbtc"
                app:layout_constraintTop_toTopOf="parent"
                android:text="Bitcoin"
                android:layout_marginLeft="@dimen/default_start_margin" />

            <TextView
                android:id="@+id/tview_symbol_btc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Custom.Default"
                android:textColor="@color/subtitle_text_color"
                app:layout_constraintStart_toStartOf="@id/tview_name_btc"
                app:layout_constraintTop_toBottomOf="@id/tview_name_btc"
                android:text="BTC"
                />


            <TextView
                android:id="@+id/tview_price_btc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_top_margin"
                style="@style/TextAppearance.Custom.H2.Bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/tview_name_btc"
                app:layout_constraintTop_toBottomOf="@id/tview_symbol_btc"
                android:textSize="18dp"
                android:text="720139767.90"/>

            <TextView
                android:id="@+id/tview_change_btc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_start_margin"
                android:layout_marginBottom="@dimen/small_margin"
                style="@style/TextAppearance.Custom.H3"
                app:layout_constraintStart_toEndOf="@id/tview_price_btc"
                app:layout_constraintBottom_toBottomOf="@id/tview_price_btc"
                android:text="-8.63%"
                android:textColor="@color/red"
                android:drawableStart="@drawable/ic_baseline_arrow_downward_24"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginLeft="16dp"
        android:text="Rp. "
        android:textSize="20dp"
        android:id="@+id/txtviewBTCWallet"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/number_coin"
        android:textSize="20dp"
        android:id="@+id/txtviewbtc_aset"/>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/parent"
        android:layout_marginTop="@dimen/signup_text_margin_top">

        <EditText
            android:id="@+id/edittxtbelanjaBTC"
            style="@style/modifiedEditText"
            android:hint="@string/enter_coin"
            android:layout_marginHorizontal="8dp"
            android:inputType="number"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnBeli2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/button_rounded"
        android:text="@string/buy"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnJual2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/button_rounded"
        android:text="@string/sell"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnHome2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_rounded"
        android:text="@string/back"
        android:textColor="@color/white" />

</LinearLayout>