<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    style="@style/loginParent"
   >
    <ScrollView
        style="@style/parent">

        <RelativeLayout
            style="@style/parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12">

                <LinearLayout
                    style="@style/parent"
                    android:background="@drawable/login_shape_bk"
                    android:orientation="vertical"
                    android:layout_weight="3">

                    <ImageView
                        style="@style/parent"
                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="login background" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">


                <TextView
                    style="@style/headerText"
                    android:layout_gravity="center"
                    android:text="ICX-Indonesia Crypto Xchange"
                    android:layout_marginTop="40dp"/>

                <androidx.cardview.widget.CardView
                    style="@style/loginCard"
                    app:cardCornerRadius="@dimen/loginCardRadius"
                    android:elevation="5dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:layout_marginBottom="@dimen/loginViewsMargin"
                    android:background="@color/whiteCardColor">



                    <LinearLayout
                        style="@style/linearParent"
                        android:layout_gravity="center"
                        android:padding="@dimen/loginViewsMargin">


                        <TextView
                            style="@style/headerTextPrimary"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:text="@string/login" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputEmail"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">
                            <EditText
                                android:id="@+id/editTextUsername"
                                style="@style/modifiedEditText"
                                android:inputType="text"
                                android:maxLines="1"
                                android:hint="Username"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputPassword"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">
                            <EditText
                                android:id="@+id/editTextPassword"
                                style="@style/modifiedEditText"
                                android:hint="@string/login_password_hint"
                                android:maxLines="1"
                                android:inputType="textPassword"/>
                        </com.google.android.material.textfield.TextInputLayout>



                        <Button
                            android:id="@+id/btnLogin"
                            android:background="@drawable/button_rounded"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:layout_gravity="center"
                            android:textColor="@color/white"
                            android:layout_marginTop="16dp"
                            android:text="Login" />

                        <TextView
                            android:id="@+id/txtViewRegister"
                            style="@style/parent"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textColor="@color/primaryTextColor"
                            android:text="@string/login_signup_hint"
                            android:onClick="viewRegisterClicked"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:gravity="center_horizontal" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView> />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>